@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+
+Action buttons (Previous/Save/Next) can be shown "top", "bottom" or "both":
+<stage name="type" action_buttons="both">
+  <component><field ref="type" required="yes" /></component>
+</stage>
+
+-->
+
 <workflow xmlns="http://eprints.org/ep3/workflow" xmlns:epc="http://eprints.org/ep3/control">
   <flow>
     <stage ref="type"/>
@@ -7,7 +16,6 @@
     <stage ref="core"/>
     <stage ref="subjects"/>
   </flow>
-
 
   <stage name="type">
     <component><field ref="type" required="yes" /></component>
